# backend

./: .gitignore  pyproject.toml
src/: consts.py
src/apps/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/apps/products/migrations/: 0001_initial.py  0002_alter_productmodel_types.py  0003_alter_basketmodel_products.py
src/apps/users/: admin.py  apps.py  consts.py  models.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/config/: rest_framework.py  spectacular.py
src/config/django/: asgi.py  settings.py  urls.py  wsgi.py
